<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/AddFoodFragment"
        android:enabled="true"
        android:title="@string/add_food"
        android:icon="@drawable/ic_baseline_fastfood_24" />
    <item
        android:id="@+id/RecommendationFragment"
        android:enabled="true"
        android:title="@string/recommend"
        android:icon="@drawable/ic_baseline_recommend_24" />
    <item
        android:id="@+id/GlucoseReportFragment"
        android:enabled="true"
        android:title="@string/glucose_report"
        android:icon="@drawable/ic_baseline_show_chart_24" />
    <item
        android:id="@+id/FoodHistoryFragment"
        android:enabled="true"
        android:title="@string/food_history"
        android:icon="@drawable/ic_baseline_history_24" />
</menu>