<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <TextView
        android:id="@+id/mealDurTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultTime"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/mealDurLabel" />

    <EditText
        android:id="@+id/foodItemTextView"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginTop="7dp"
        android:linksClickable="false"
        android:maxLines="1"
        android:text="@string/defaultTextValue"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/foodQtyTextView"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/consumpRadioGroup"
        tools:ignore="TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/mealSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/defaultTextValue"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/mealLabel" />

    <RadioGroup
        android:id="@+id/consumpRadioGroup"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/foodItemTextView"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/foodCatSpinner">

        <RadioButton
            android:id="@+id/radio025"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1/4"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radio050"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1/2"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radio075"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3/4"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radio100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Full"
            android:textSize="12sp" />
    </RadioGroup>

    <Spinner
        android:id="@+id/foodCatSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:dropDownWidth="wrap_content"
        android:text="@string/defaultTextValue"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/foodCatLabel"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/foodCatLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        app:layout_constraintBottom_toTopOf="@+id/consumePercentLabel"
        app:layout_constraintStart_toStartOf="@+id/mealLabel"
        app:layout_constraintTop_toBottomOf="@+id/mealLabel" />

    <TextView
        android:id="@+id/photoTimestampTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultTime"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/photoTimestampLabel" />

    <TextView
        android:id="@+id/photoTimestampLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo_timestamp"
        app:layout_constraintBottom_toTopOf="@+id/mealDurLabel"
        app:layout_constraintStart_toStartOf="@+id/foodQtyLabel"
        app:layout_constraintTop_toBottomOf="@+id/foodQtyLabel" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="#date "
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/mealLabel"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="20dp"
        android:text="@string/meal"
        app:layout_constraintBottom_toTopOf="@+id/foodCatLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/foodItemLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/food_item"
        app:layout_constraintBottom_toTopOf="@+id/foodQtyLabel"
        app:layout_constraintStart_toStartOf="@+id/consumePercentLabel"
        app:layout_constraintTop_toBottomOf="@+id/consumePercentLabel" />

    <TextView
        android:id="@+id/consumePercentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/consumption"
        app:layout_constraintBottom_toTopOf="@+id/foodItemLabel"
        app:layout_constraintStart_toStartOf="@+id/foodCatLabel"
        app:layout_constraintTop_toBottomOf="@+id/foodCatLabel" />

    <TextView
        android:id="@+id/mealDurLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Meal Duration:"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/photoTimestampLabel"
        app:layout_constraintTop_toBottomOf="@+id/photoTimestampLabel" />

    <TextView
        android:id="@+id/foodQtyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        app:layout_constraintBottom_toTopOf="@+id/photoTimestampLabel"
        app:layout_constraintStart_toStartOf="@+id/foodItemLabel"
        app:layout_constraintTop_toBottomOf="@+id/foodItemLabel" />

    <TextView
        android:id="@+id/foodQtyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultQuantity"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/foodQtyLabel" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        app:layout_constraintGuide_percent="0.43" />

    <Button
        android:id="@+id/saveMealButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:fontFamily="sans-serif-medium"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="Save"
        android:textAllCaps="false"
        android:textColor="@color/purple_700"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/dateTextView"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/dateTextView" />

    <ImageButton
        android:id="@+id/foodCaptureButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/button_background_blue"
        android:foregroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <ImageButton
        android:id="@+id/recognitionButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/button_background_blue"
        android:foregroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/foodCaptureButton"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:srcCompat="@android:drawable/ic_menu_search" />

    <ImageButton
        android:id="@+id/playPauseMealButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/button_background_blue"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@android:drawable/ic_media_play"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <TextView
        android:id="@+id/RecognitionResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Recognition result"
        app:layout_constraintBottom_toTopOf="@+id/foodCaptureButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />


</androidx.constraintlayout.widget.ConstraintLayout>