<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.07" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.72" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="false"
            app:layout_constraintGuide_percent="0.43" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />


        <!--    <Spinner-->
        <!--        android:id="@+id/mealSpinner"-->
        <!--        android:layout_width="0dp"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:text="@string/defaultTextValue"-->
        <!--        app:layout_constraintEnd_toStartOf="@+id/guideline5"-->
        <!--        app:layout_constraintStart_toStartOf="@+id/guideline4"-->
        <!--        app:layout_constraintTop_toTopOf="@+id/mealLabel" />-->

        <TextView
            android:id="@+id/foodItemLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/food_item"
            android:textSize="14sp"
            android:fontFamily="sans-serif"
            app:layout_constraintBottom_toTopOf="@+id/consumePercentLabel"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="0.281"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline1" />

        <EditText
            android:id="@+id/foodItemTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:linksClickable="false"
            android:selectAllOnFocus="true"
            android:maxLines="1"
            android:textSize="14sp"
            android:inputType="textAutoComplete"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="@+id/foodItemLabel"
            app:layout_constraintBottom_toBottomOf="@+id/foodItemLabel"
            tools:ignore="TouchTargetSizeCheck" />

        <!--    <Spinner-->
        <!--        android:id="@+id/foodCatSpinner"-->
        <!--        android:layout_width="0dp"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:dropDownWidth="wrap_content"-->
        <!--        android:text="@string/defaultTextValue"-->
        <!--        app:layout_constraintEnd_toStartOf="@+id/guideline5"-->
        <!--        app:layout_constraintStart_toStartOf="@+id/guideline4"-->
        <!--        app:layout_constraintTop_toTopOf="@+id/foodCatLabel"-->
        <!--        tools:ignore="SpeakableTextPresentCheck" />-->

        <!--    <TextView-->
        <!--        android:id="@+id/foodCatLabel"-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:text="@string/category"-->
        <!--        app:layout_constraintBottom_toTopOf="@+id/consumePercentLabel"-->
        <!--        app:layout_constraintStart_toStartOf="@+id/mealLabel"-->
        <!--        app:layout_constraintTop_toBottomOf="@+id/mealLabel" />-->


        <!--    <TextView-->
        <!--        android:id="@+id/mealLabel"-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="19dp"-->
        <!--        android:layout_marginStart="20dp"-->
        <!--        android:text="@string/meal"-->
        <!--        app:layout_constraintBottom_toTopOf="@+id/foodCatLabel"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toTopOf="@+id/guideline3" />-->

        <!--    <TextView-->
        <!--        android:id="@+id/foodQtyLabel"-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:text="@string/quantity"-->
        <!--        app:layout_constraintBottom_toTopOf="@+id/photoTimestampLabel"-->
        <!--        app:layout_constraintStart_toStartOf="@+id/foodItemLabel"-->
        <!--        app:layout_constraintTop_toBottomOf="@+id/foodItemLabel" />-->

        <!--    <TextView-->
        <!--        android:id="@+id/foodQtyTextView"-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:text="@string/defaultQuantity"-->
        <!--        app:layout_constraintEnd_toStartOf="@+id/guideline5"-->
        <!--        app:layout_constraintHorizontal_bias="0.0"-->
        <!--        app:layout_constraintStart_toStartOf="@+id/guideline4"-->
        <!--        app:layout_constraintTop_toTopOf="@+id/foodQtyLabel" />-->

        <TextView
            android:id="@+id/consumePercentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text="@string/consumption"
            app:layout_constraintBottom_toTopOf="@+id/photoTimestampLabel"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="0.407"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="@+id/consumePercentLabel"
            app:layout_constraintBottom_toBottomOf="@+id/consumePercentLabel">

            <RadioButton
                android:id="@+id/radio025"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1/4"
                android:textSize="12sp"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/radio050"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1/2"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radio075"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3/4"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radio100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Full"
                android:textSize="12sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/photoTimestampLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/photo_timestamp"
            app:layout_constraintBottom_toTopOf="@+id/mealDurLabel"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/photoTimestampTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/defaultTime"
            android:gravity="center"
            android:fontFamily="@font/comic"
            app:layout_constraintBottom_toBottomOf="@+id/photoTimestampLabel"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="@+id/photoTimestampLabel"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="5dp"
            android:text="#date "
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline1"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/mealDurLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="Consumption time:"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/mealDurTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/mealDurTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/defaultTime"
            android:gravity="center"
            android:fontFamily="@font/comic"
            app:layout_constraintBottom_toBottomOf="@+id/mealDurLabel"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="@+id/mealDurLabel" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView"
            android:layout_width="168dp"
            android:layout_height="179dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <Button
            android:id="@+id/saveMealButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="Save"
            android:textAllCaps="false"
            android:textColor="@color/purple_700"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/dateTextView"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="@+id/dateTextView" />

        <ImageButton
            android:id="@+id/foodCaptureButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/button_background_blue"
            android:foregroundTint="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/guideline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:srcCompat="@android:drawable/ic_menu_camera" />


    <!--    <ImageButton-->
    <!--        android:id="@+id/recognitionButton"-->
    <!--        android:layout_width="50dp"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:background="@drawable/button_background_blue"-->
    <!--        android:foregroundTint="@color/black"-->
    <!--        app:layout_constraintBottom_toBottomOf="@id/guideline5"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/guideline7"-->
    <!--        app:layout_constraintStart_toEndOf="@id/foodCaptureButton"-->
    <!--        app:layout_constraintTop_toTopOf="@+id/guideline4"-->
    <!--        app:layout_constraintVertical_bias="1.0"-->
    <!--        app:srcCompat="@android:drawable/ic_menu_search" />-->

        <ImageButton
            android:id="@+id/playPauseMealButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/button_background_blue"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:srcCompat="@android:drawable/ic_media_play"
            tools:ignore="SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline5">

            <TextView
                android:id="@+id/nutrition_fact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="Nutrition Facts: "
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="18sp"
                android:typeface="sans" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/nutrition1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginStart="5dp"
                        android:text="Nutrition information"
                        android:gravity="center_vertical"
                        android:textSize="15sp"
                        android:typeface="sans" />
                    <TextView
                        android:id="@+id/nutrition2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginEnd="5dp"
                        android:gravity="center_vertical"
                        android:textSize="15sp"
                        android:typeface="sans" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:id="@+id/reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please take a photo!"
            android:layout_marginBottom="10dp"
            android:visibility="visible"
            android:textSize="15sp"
            android:typeface="sans"
            app:layout_constraintBottom_toTopOf="@+id/foodCaptureButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="Reset"
            android:src="@drawable/ic_baseline_replay_24"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>